Add content to Aboutme

--- a/index.html
+++ b/index.html
@@ -80,37 +80,32 @@
         <article class="aboutme__personal">
           <ul>
             <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-              ex eaque unde non, repellendus odio maiores voluptates ipsa. Vel
-              velit blanditiis, numquam ad ipsa autem ex suscipit dolorum non.
+              Mi nombre es Jonahan David García González, tengo 23 años, y soy
+              de San José, Costa Rica.
             </li>
             <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+              Soy bachiller y tecnico medio en desarrollo de software.
+              Actualmente estudio Ingeniería en Sistemas en la universidad.
             </li>
             <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+              Llevo un año estudiando desarrollo web de forma completamente
+              autodidacta, y es la rama del desarrollo de software que hasta
+              ahora más me ha gustado.
             </li>
             <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+              Estoy completamente dispuesto a aprender de otros desarrolladores
+              con más experiencia que yo, así como a aportar mi conocimiento
+              para quien que así lo requiera.
             </li>
             <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+              Mi fuerte está en el desarrollo front-end, con tecnologías como
+              HTML, CSS, JavaScript, React.js, Next.js. Sin embargo, he creado
+              las APIs que uso en mis proyectos con Node.js y Express.js y las
+              distintas herramientas que tienen para trabajar.
             </li>
             <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
-            </li>
-            <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
-            </li>
-            <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
-            </li>
-            <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
-            </li>
-            <li>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, ea?
+              He desarrollado varios proyectos personales de distintos tipos,
+              que puedes encontrar más abajo.
             </li>
             <li>
               <a
