Add description to form

--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@
     </section>
     <section class="contact">
       <h2>FORMULARIO DE CONTACTO</h2>
+      <h3>
+        Siéntete libre de contactarme por cualquier medio sí te gustaría que
+        formara parte de tu equipo de trabajo:
+      </h3>
       <form
         action="https://formspree.io/f/mdoywqpd"
         method="POST"
