--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
       type="text/css"
       media="screen and (max-width: 768px)"
     />
+    <link
+      href="./styles/breakpoints/sm-tablet.css"
+      rel="stylesheet"
+      type="text/css"
+      media="screen and (max-width: 600px)"
+    />
     <title>Jonathan David García González</title>
     <script
       src="https://kit.fontawesome.com/3f6e777ff9.js"
