--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           </li>
         </ul>
       </section>
-      <!-- <section class="projects" id="projects">
+      <section class="projects" id="projects">
         <h2>PROYECTOS</h2>
         <div class="projects__container">
           <div class="projects__item">
@@ -413,8 +413,8 @@
             </div>
           </div>
         </div>
-      </section> -->
-      <section class="contact">
+      </section>
+      <!-- <section class="contact">
         <h2>FORMULARIO DE CONTACTO</h2>
         <h3>
           Siéntete libre de contactarme por cualquier medio sí te gustaría que
@@ -470,7 +470,7 @@
           </ul>
         </form>
         <article class="contact__social"></article>
-      </section>
+      </section> -->
     </div>
     <script>
       const $form = document.querySelector('#form')
