Change color buttons and project styles

--- a/index.html
+++ b/index.html
@@ -217,6 +217,32 @@
         <div class="projects__container">
           <div class="projects__item">
             <div class="projects__item-description">
+              <h3>Chat</h3>
+              <h4>Aplicación de chat en tiempo real.</h4>
+              <p>
+                Un chat básico, donde podremos enviar y recibir mensajes en
+                tiempo real gracias a los Web Sockets. Para probarlo debemos
+                crear un usuario o ingresamos con alguno ya creado, y escogemos
+                la persona de los restantes usuarios con la que queremos
+                chatear.
+              </p>
+              <div class="projects__item-description-buttons">
+                <a href="https://megabyte-chat.vercel.app/" target="_blank"
+                  >Ver proyecto</a
+                >
+                <a
+                  href="https://github.com/jonathan-cursos/megabyte_chat"
+                  target="_blank"
+                  >Ver Código</a
+                >
+              </div>
+            </div>
+            <div class="projects__item-image">
+              <img src="./assets/projects/chat.jpg" alt="" />
+            </div>
+          </div>
+          <!-- <div class="projects__item">
+            <div class="projects__item-description">
               <div class="projects__item-description-container">
                 <div class="description-initial">
                   <h3>CHAT</h3>
@@ -411,15 +437,11 @@
                 loading="lazy"
               />
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <section class="contact">
         <h2>FORMULARIO DE CONTACTO</h2>
-        <h3>
-          Siéntete libre de contactarme por cualquier medio sí te gustaría que
-          formara parte de tu equipo de trabajo:
-        </h3>
         <form
           action="https://formspree.io/f/mdoywqpd"
           method="POST"
