style projects and buttons

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   class="nav__list-item-link"
                   href="./assets/curriculum.pdf"
                   target="_blank"
-                  >Ver Curriculum</a
+                  ><span>Ver Curriculum</span></a
                 >
               </li>
             </ul>
@@ -228,12 +228,12 @@
               </p>
               <div class="projects__item-description-buttons">
                 <a href="https://megabyte-chat.vercel.app/" target="_blank"
-                  >Ver proyecto</a
+                  ><span>Ver proyecto</span></a
                 >
                 <a
                   href="https://github.com/jonathan-cursos/megabyte_chat"
                   target="_blank"
-                  >Ver Código</a
+                  ><span>Ver Código</span></a
                 >
               </div>
             </div>
@@ -241,206 +241,91 @@
               <img src="./assets/projects/chat.jpg" alt="" />
             </div>
           </div>
-          <!-- <div class="projects__item">
-            <div class="projects__item-description">
-              <div class="projects__item-description-container">
-                <div class="description-initial">
-                  <h3>CHAT</h3>
-                  <div class="projects__item-description-buttons">
-                    <a href="https://megabyte-chat.vercel.app/" target="_blank"
-                      >Ver proyecto</a
-                    >
-                    <a
-                      href="https://github.com/jonathan-cursos/megabyte_chat"
-                      target="_blank"
-                      >Ver Código</a
-                    >
-                  </div>
-                  <i class="fas fa-chevron-left"></i>
-                </div>
-                <div class="description-secondary">
-                  <p>
-                    Un chat básico, donde podremos enviar y recibir mensajes en
-                    tiempo real gracias a los Web Sockets. Para probarlo debemos
-                    crear un usuario o ingresamos con alguno ya creado, y
-                    escogemos la persona de los restantes usuarios con la que
-                    queremos chatear.
-                  </p>
-                  <h4>Tecnologías usadas:</h4>
-                  <ul>
-                    <li>Next.js - React.js</li>
-                    <li>Styled JSX</li>
-                    <li>Node.js - Express</li>
-                    <li>Web sockets</li>
-                    <li>Heroku</li>
-                    <li>Vercel</li>
-                  </ul>
-                  <i class="fas fa-chevron-right"></i>
-                </div>
-              </div>
+          <div class="projects__item">
+            <div class="projects__item-image">
+              <img src="./assets/projects/gallery.jpg" alt="" />
             </div>
-            <div class="projects__item-visuals">
-              <div class="image-cover"></div>
-              <img
-                src="./assets/projects/chat.jpg"
-                alt="Authenticate App"
-                class="project__image"
-                loading="lazy"
-              />
+            <div class="projects__item-description">
+              <h3>Galería</h3>
+              <h4>Aplicación de chat en tiempo real.</h4>
+              <p>
+                Un chat básico, donde podremos enviar y recibir mensajes en
+                tiempo real gracias a los Web Sockets. Para probarlo debemos
+                crear un usuario o ingresamos con alguno ya creado, y escogemos
+                la persona de los restantes usuarios con la que queremos
+                chatear.
+              </p>
+              <div class="projects__item-description-buttons">
+                <a
+                  href="https://davdev-gallery-nextui.vercel.app/"
+                  target="_blank"
+                  ><span>Ver proyecto</span></a
+                >
+                <a
+                  href="https://github.com/jonathangg03/davdev-gallery-nextui"
+                  target="_blank"
+                  ><span>Ver Código</span></a
+                >
+              </div>
             </div>
           </div>
           <div class="projects__item">
             <div class="projects__item-description">
-              <div class="projects__item-description-container">
-                <div class="description-initial">
-                  <h3>GALERÍA</h3>
-                  <div class="projects__item-description-buttons">
-                    <a
-                      href="https://davdev-gallery-nextui.vercel.app/"
-                      target="_blank"
-                      >Ver proyecto</a
-                    >
-                    <a
-                      href="https://github.com/jonathangg03/davdev-gallery-nextui"
-                      target="_blank"
-                      >Ver Código</a
-                    >
-                  </div>
-                  <i class="fas fa-chevron-left"></i>
-                </div>
-                <div class="description-secondary">
-                  <p>
-                    Podremos ingresar imagenes que se podrán ver en el incio de
-                    la página, así como eliminarlas y verlas en tamaño completo.
-                    Las imagenes se almacenan en Cloudinary.
-                  </p>
-
-                  <h4>Tecnologías usadas:</h4>
-                  <ul>
-                    <li>Next.js - React.js</li>
-                    <li>NextUI</li>
-                    <li>Node.js - Express</li>
-                    <li>Multer</li>
-                    <li>Cloudinary</li>
-                    <li>Heroku</li>
-                    <li>Vercel</li>
-                  </ul>
-                  <i class="fas fa-chevron-right"></i>
-                </div>
+              <h3>Autenticación</h3>
+              <h4>Aplicación de chat en tiempo real.</h4>
+              <p>
+                Un chat básico, donde podremos enviar y recibir mensajes en
+                tiempo real gracias a los Web Sockets. Para probarlo debemos
+                crear un usuario o ingresamos con alguno ya creado, y escogemos
+                la persona de los restantes usuarios con la que queremos
+                chatear.
+              </p>
+              <div class="projects__item-description-buttons">
+                <a
+                  href="https://authenticate-app-frontend.herokuapp.com/"
+                  target="_blank"
+                  ><span>Ver proyecto</span></a
+                >
+                <a
+                  href="https://github.com/jonathan-cursos/authenticate_app_frontend"
+                  target="_blank"
+                  ><span>Ver Código</span></a
+                >
               </div>
             </div>
-            <div class="projects__item-visuals">
-              <div class="image-cover"></div>
-              <img
-                src="./assets/projects/gallery.jpg"
-                alt="Authenticate App"
-                class="project__image"
-                loading="lazy"
-              />
+            <div class="projects__item-image">
+              <img src="./assets/projects/authenticate.jpg" alt="" />
             </div>
           </div>
           <div class="projects__item">
-            <div class="projects__item-description">
-              <div class="projects__item-description-container">
-                <div class="description-initial">
-                  <h3>AUTENTICACIÓN</h3>
-                  <div class="projects__item-description-buttons">
-                    <a
-                      href="https://authenticate-app-frontend.herokuapp.com/"
-                      target="_blank"
-                      >Ver proyecto</a
-                    >
-                    <a
-                      href="https://github.com/jonathan-cursos/authenticate_app_frontend"
-                      target="_blank"
-                      >Ver Código</a
-                    >
-                  </div>
-                  <i class="fas fa-chevron-left"></i>
-                </div>
-                <div class="description-secondary">
-                  <p>
-                    Una aplicación donde usamos diferentes tipos de
-                    autenticación para ingresar. Una vez ingresados, vemos el
-                    nombre, apellidos, y correo de la persona. Las estrategías
-                    usadas son la básica, con Facebook, Twitter y con Google.
-                  </p>
-                  <h4>Tecnologías usadas:</h4>
-                  <ul>
-                    <li>React.js</li>
-                    <li>CSS</li>
-                    <li>Node.js - Express</li>
-                    <li>Passport.js</li>
-                    <li>Heroku</li>
-                  </ul>
-                  <i class="fas fa-chevron-right"></i>
-                </div>
-              </div>
+            <div class="projects__item-image">
+              <img src="./assets/projects/portal.jpg" alt="" />
             </div>
-            <div class="projects__item-visuals">
-              <div class="image-cover"></div>
-              <img
-                src="./assets/projects/authenticate.jpg"
-                alt="Authenticate App"
-                class="project__image"
-                loading="lazy"
-              />
+            <div class="projects__item-description">
+              <h3>Portal</h3>
+              <h4>Aplicación de chat en tiempo real.</h4>
+              <p>
+                Un chat básico, donde podremos enviar y recibir mensajes en
+                tiempo real gracias a los Web Sockets. Para probarlo debemos
+                crear un usuario o ingresamos con alguno ya creado, y escogemos
+                la persona de los restantes usuarios con la que queremos
+                chatear.
+              </p>
+              <div class="projects__item-description-buttons">
+                <a href="https://portal-d0251.web.app/" target="_blank"
+                  ><span>Ver proyecto</span></a
+                >
+                <a
+                  href="https://github.com/jonathangg03/portal-cesa-frontend"
+                  target="_blank"
+                  ><span>Ver Código</span></a
+                >
+              </div>
             </div>
           </div>
-          <div class="projects__item">
-            <div class="projects__item-description">
-              <div class="projects__item-description-container">
-                <div class="description-initial">
-                  <h3>PORTAL</h3>
-                  <div class="projects__item-description-buttons">
-                    <a href="https://portal-d0251.web.app/" target="_blank"
-                      >Ver proyecto</a
-                    >
-                    <a
-                      href="https://github.com/jonathangg03/portal-cesa-frontend"
-                      target="_blank"
-                      >Ver Código</a
-                    >
-                  </div>
-                  <i class="fas fa-chevron-left"></i>
-                </div>
-                <div class="description-secondary">
-                  <p>
-                    Aquí hice una copia similar de un portal que usamos en la
-                    empresa que me encuentro trabajando actualmente, donde
-                    mantenemos el registro de diferente información necesaria
-                    para nuestro puesto, como un directorio, procedimientos de
-                    clientes, documentos, entre otros. Tiene un login, pero no
-                    es seguro, por lo que no hay que colocar ningún dato
-                    valioso.
-                  </p>
-                  <h4>Tecnologías usadas:</h4>
-                  <ul>
-                    <li>React.js</li>
-                    <li>CSS</li>
-                    <li>Node.js - Express</li>
-                    <li>Multer</li>
-                    <li>Quill.js</li>
-                    <li>Heroku</li>
-                    <li>Firebase</li>
-                  </ul>
-                  <i class="fas fa-chevron-right"></i>
-                </div>
-              </div>
-            </div>
-            <div class="projects__item-visuals">
-              <div class="image-cover"></div>
-              <img
-                src="./assets/projects/portal.jpg"
-                alt="Authenticate App"
-                class="project__image"
-                loading="lazy"
-              />
-            </div>
-          </div> -->
         </div>
       </section>
-      <section class="contact">
+      <section class="contact" id="contact">
         <h2>FORMULARIO DE CONTACTO</h2>
         <form
           action="https://formspree.io/f/mdoywqpd"
@@ -465,7 +350,7 @@
               rows="10"
             ></textarea>
           </label>
-          <button type="submit">Enviar</button>
+          <button type="submit"><span>Enviar</span></button>
           <ul>
             <li>
               <a href="https://github.com/jonathangg03" target="_blank"
