--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
           <article class="aboutme__personal">
             <ul>
               <li>
-                Mi nombre es Jonahan David García González, tengo 23 años, y soy
-                de San José, Costa Rica.
+                Mi nombre es Jonathan David García González, tengo 23 años, y
+                soy de San José, Costa Rica.
               </li>
               <li>
-                Soy bachiller y tecnico medio en desarrollo de software.
+                Soy bachiller y técnico medio en desarrollo de software.
                 Actualmente estudio Ingeniería en Sistemas en la universidad.
               </li>
               <li>
@@ -160,15 +160,15 @@
           <ul>
             <li>Trabajar del desarrollo de software.</li>
             <li>Aprender de diferentes desarrolladores de la industria.</li>
-            <li>Aprender desarrollo movil.</li>
+            <li>Aprender desarrollo móvil.</li>
             <li>
-              Poder enseñar los temas que he aprendido de la forma que a mi me
+              Poder enseñar desarrollo de software de la forma que a mí me
               hubiera gustado aprender.
             </li>
             <li>
               Desarrollar una aplicación que tenga un impacto en la sociedad.
             </li>
-            <li>Estudiar robotica en algún momento de mi vida.</li>
+            <li>Estudiar robótica en algún momento de mi vida.</li>
             <li>
               Vivir en algún país desarrollado por un tiempo, así como conocer
               distintos países.
@@ -191,16 +191,16 @@
             <div><i class="fab fa-react icon-big"></i></div>
             <h3>SPA con React.js</h3>
             <p>
-              Creación de Single Page Applications tanto con React.js como con
-              Next.js
+              Desarrollo de Single Page Applications tanto con React.js como con
+              Next.js.
             </p>
           </li>
           <li>
             <div><i class="fab fa-node-js icon-big"></i></div>
             <h3>REST API con Node.js</h3>
             <p>
-              Creación de distintas APIs REST con Node.js, ayudandonos de
-              Express.js y almacenamiento de datos en MongoDB.
+              Programación de distintas APIs con Node.js y Express.js.
+              Almacenando los datos en MongoDB.
             </p>
           </li>
           <li>
@@ -252,13 +252,11 @@
             </div>
             <div class="projects__item-description">
               <h3>Galería</h3>
-              <h4>Aplicación de chat en tiempo real.</h4>
+              <h4>Galería de imágenes.</h4>
               <p>
-                Un chat básico, donde podremos enviar y recibir mensajes en
-                tiempo real gracias a los Web Sockets. Para probarlo debemos
-                crear un usuario o ingresamos con alguno ya creado, y escogemos
-                la persona de los restantes usuarios con la que queremos
-                chatear.
+                Una aplicación de galería donde podremos subir imágenes con una
+                descripción, verlas en pantalla completa y eliminarlas. Estas se
+                almacenan en Cloudinary, y para los estilos usamos NextUI.
               </p>
               <div class="projects__item-description-buttons">
                 <a
@@ -277,13 +275,11 @@
           <div class="projects__item">
             <div class="projects__item-description">
               <h3>Autenticación</h3>
-              <h4>Aplicación de chat en tiempo real.</h4>
+              <h4>Diferentes métodos de autenticación.</h4>
               <p>
-                Un chat básico, donde podremos enviar y recibir mensajes en
-                tiempo real gracias a los Web Sockets. Para probarlo debemos
-                crear un usuario o ingresamos con alguno ya creado, y escogemos
-                la persona de los restantes usuarios con la que queremos
-                chatear.
+                Una aplicación en la cual probamos estrategias de autenticación
+                de Google, Facebook, Twitter y la estrategia básica. Al ingresar
+                veremos nuestra información.
               </p>
               <div class="projects__item-description-buttons">
                 <a
@@ -316,13 +312,11 @@
             </div>
             <div class="projects__item-description">
               <h3>Portal</h3>
-              <h4>Aplicación de chat en tiempo real.</h4>
+              <h4>Recreación de portal.</h4>
               <p>
-                Un chat básico, donde podremos enviar y recibir mensajes en
-                tiempo real gracias a los Web Sockets. Para probarlo debemos
-                crear un usuario o ingresamos con alguno ya creado, y escogemos
-                la persona de los restantes usuarios con la que queremos
-                chatear.
+                Una recreación del portal web que usamos en la empresa donde
+                trabajo actualmente para mantener el registro de información que
+                necesitamos en el puesto.
               </p>
               <div class="projects__item-description-buttons">
                 <a href="https://portal-d0251.web.app/" target="_blank"
