--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,500;0,600;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/module.css" />
@@ -156,7 +152,7 @@
           </article>
         </div>
         <div class="aboutme__objectives">
-          <h2>OBJETIVOS PERSONALES</h2>
+          <h2>MIS OBJETIVOS</h2>
           <ul>
             <li>Trabajar del desarrollo de software.</li>
             <li>Aprender de diferentes desarrolladores de la industria.</li>
@@ -389,73 +385,7 @@
         <i class="fas fa-bars"></i>
       </div>
     </div>
-    <script>
-      const $form = document.querySelector('#form')
-      $form.addEventListener('submit', handleSubmit)
-
-      async function handleSubmit(event) {
-        event.preventDefault()
-        const formData = new FormData(this)
-        const response = await fetch(this.action, {
-          method: 'post',
-          body: formData,
-          headers: {
-            Accept: 'application/json'
-          }
-        })
-        if (response.ok) {
-          this.reset()
-          alert(
-            'Mensaje enviado. Gracias por tomarme en cuenta, te estare contactando pronto.'
-          )
-        }
-      }
-    </script>
-    <script>
-      const $initials = document.querySelectorAll(
-        '.projects__item-description-container'
-      )
-
-      $initials.forEach((el) => {
-        el.addEventListener('click', (e) => {
-          if (e.target && e.target.tagName === 'I') {
-            console.log(el.children[0])
-            el.children[0].classList.toggle('move-initial')
-            el.children[1].classList.toggle('move-secondary')
-          }
-        })
-      })
-    </script>
-    <script>
-      const $headerActivator = document.getElementById('header__activator')
-      const $headerCloser = document.querySelector('.header__closer')
-      const $header = document.querySelector('header')
-      const $headerImage = document.querySelector('.header__image--bg')
-      const $navList = document.querySelector('.nav__list')
-
-      $headerActivator.addEventListener('click', (e) => {
-        console.log(e)
-        $header.classList.add('activate__header')
-        $headerActivator.classList.remove('header__activators')
-      })
-
-      $headerCloser.addEventListener('click', (e) => {
-        console.log(e)
-        $header.classList.remove('activate__header')
-        $headerActivator.classList.add('header__activators')
-      })
-
-      window.addEventListener('load', (e) => {
-        console.log($headerImage)
-        $headerImage.classList.add('opacity-img')
-      })
-
-      $navList.addEventListener('click', (e) => {
-        if (e.target.tagName === 'A') {
-          $header.classList.remove('activate__header')
-          $headerActivator.classList.add('header__activators')
-        }
-      })
-    </script>
+    <script src="./sendEmail.js"></script>
+    <script src="./activators.js"></script>
   </body>
 </html>
